--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Hello from Recipe App</h1>
 <p-button label="Check" icon="pi pi-check"></p-button>
 <app-search></app-search>
+<h1>Hello From recipee</h1>
