--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
-<app-search></app-search>
-
-<h1>Heyy</h1>
+<app-homepage></app-homepage>
+<app-all-recipes></app-all-recipes>
+<app-recipe-page></app-recipe-page>
+<app-recipe-form></app-recipe-form>
