--- a/src/app/recipes/all-recipes/all-recipes.component.html
+++ b/src/app/recipes/all-recipes/all-recipes.component.html
@@ -1,5 +1,6 @@
     <div class="col-12">
         <div class="card">
+            <app-search></app-search>
             <div>
                 <div   class="flex p-5 flex-row flex-wrap justify-content-evenly align-items-center gap-4">
                     <div *ngFor="let recipe of recipes"  class="bg-primary-100  text-center border-round">
