--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,31 +1,44 @@
-<div class="card card-w-title">
-    <p-menubar>
-        <ng-template pTemplate="start" >
-            <div class="align-self-center flex justify-content-between">
-                <img src="assets/img/logo.png" alt="">
+<div class="container">
+    <div>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <img class="max-w-10rem" src="assets/img/logo.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Recipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex gap-2" role="search">
+                        <button class="btn btn-outline-success" type="submit">Signup</button>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </div>
+                </div>
             </div>
-        </ng-template>
-        <ng-template pTemplate="end">
-            <div class="flex align-content-center ">
-                <button pButton pRipple type="button" label="All Recipes" class="m-2"></button>
-                <button pButton pRipple type="button" label="Add Recipe" class="p-button-secondary m-2"></button>
-                <button pButton pRipple type="button" label="Edit Recipe" class="p-button-danger m-2"></button>
-            </div>
-        </ng-template>
-    </p-menubar>
-</div>
-<app-search></app-search>
-<div class="grid grid-nogutter surface-section text-800">
-    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
-        <section>
-            <span class="block text-6xl font-bold ">Discover the Recipes</span>
-            <div class="text-6xl text-primary font-bold mb-3">YOU DESERVE</div>
-            <p class="mt-0 mb-4 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            
-            <button pButton pRipple label="Discover" type="button" class="mr-3 p-button-raised"></button>
-        </section>
+        </nav>
     </div>
-    <div class="col-12 md:col-6 overflow-hidden">
-        <img src="assets/img/hero-img.png" alt="Image" class="md:ml-auto p-6 block md:h-full" style="width: 75%;">
+    <div class="grid grid-nogutter surface-section text-800">
+        <div class="col-12 md:col-6 p-5 text-center md:text-left flex align-items-center ">
+            <section>
+                <span class="block text-8xl font-bold font">Discover the Recipes</span>
+                <div class="text-7xl text-primary font-bold mb-3 font">YOU DESERVE</div>
+                <p class="mt-0 mb-4 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                
+                <button pButton pRipple label="Discover" type="button" class="mr-3 p-button-raised"></button>
+            </section>
+        </div>
+        <div class="col-12 md:col-6 overflow-hidden">
+            <img src="assets/img/hero-img.png" alt="Image" class="md:ml-auto p-6 block md:h-full" style="width: 75%;">
+        </div>
     </div>
 </div>
+
