--- a/src/app/recipes/search/search.component.html
+++ b/src/app/recipes/search/search.component.html
@@ -1,15 +1,8 @@
-<div class="card flex flex-wrap justify-content-center gap-3">
-    <span class="p-input-icon-left">
+<div class=" flex flex-wrap justify-content-center gap-3 p-0">
+    <span class="p-input-icon-left  m-auto py-2">
       <i class="pi pi-search"></i>
       <input type="text" pInputText [(ngModel)]="value" (keyup.enter)="onSearch()" placeholder="Search" />
     </span>
-  
-    <!-- <div style="width: 400px;">
-      <p-multiSelect [options]="ingredients" [(ngModel)]="selectedIngredients" defaultLabel="Add filter" optionLabel="name" [style]="{ 'width': '90%' }" [panelStyle]="{ 'width': '90%' }">
-      </p-multiSelect>
-    </div> -->
-  
-    
   </div>
   <div *ngIf="recipes.length > 0">
     <h2>Recipes:</h2>
