--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,14 @@
 @import "primeng/resources/primeng.css";
 @import "assets/layout/styles/layout/layout.scss";
 @import "primeflex/primeflex.css";
+
+body {
+    background: rgb(255, 255, 255) !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.font { 
+    font-family: 'Amatic SC', cursive;
+    font-weight: 700 !important;
+    font-size: 42px;
+}
