--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
- 
-<app-homepage></app-homepage>
-<app-all-recipes></app-all-recipes> 
-<app-recipe-page></app-recipe-page>
+<app-nav></app-nav>
+<app-login2></app-login2>
+
+<!-- <app-homepage></app-homepage>
+<<app-recipe-page></app-recipe-page>
+<app-all-recipes></app-all-recipes>
+<app-recipe-edit></app-recipe-edit> 
+<app-recipe-form></app-recipe-form>  -->
