--- a/src/app/users/register/register.component.html
+++ b/src/app/users/register/register.component.html
@@ -1,1 +1,37 @@
-<p>register works!</p>
+<p-button (click)="showDialog()" styleClass="p-button-outlined p-button-danger" label="Signup"></p-button>
+    <p-dialog header="SignUp" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+            <div class="card p-fluid ">
+                <h5>Please fill this information :</h5>
+                <div class="field">
+                    <label >Name</label>
+                    <input pInputText formControlName="userName" type="text" />
+                </div>
+                <div class="field">
+                    <label >Email</label>
+                    <input pInputText formControlName="userEmail" type="text" />
+                </div>
+                <div class="field">
+                    <label >Password</label>
+                    <p-password formControlName="userPass">
+                        <ng-template pTemplate="header">
+                            <h6>Pick a password</h6>
+                        </ng-template>
+                        <ng-template pTemplate="footer">
+                            <p class="mt-2">Suggestions</p>
+                            <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                                <li>At least one lowercase</li>
+                                <li>At least one uppercase</li>
+                                <li>At least one numeric</li>
+                                <li>Minimum 8 characters</li>
+                            </ul>
+                        </ng-template>
+                    </p-password>
+                </div>
+                <div class="d-flex gap-2">
+                    <p-button styleClass="p-button p-button-success" type="submit">Register</p-button>
+                    <p-button styleClass="p-button-outlined p-button-danger" type="button" (click)="cancel()">Cancel</p-button>
+                </div>
+            </div>
+        </form>
+    </p-dialog>
