browse, nav bar modifications, split pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
-<app-nav></app-nav>
+<!-- 
 <app-login2></app-login2>
 
-<!-- <app-homepage></app-homepage>
-<<app-recipe-page></app-recipe-page>
-<app-all-recipes></app-all-recipes>
-<app-recipe-edit></app-recipe-edit> 
+
+<<app-recipe-page></app-recipe-page> -->
+<!--  -->
+<!-- <app-recipe-edit></app-recipe-edit> 
 <app-recipe-form></app-recipe-form>  -->
+<app-nav></app-nav>
+<router-outlet ></router-outlet>
+<app-footer></app-footer>
+<!-- <app-search></app-search>
+
+<app-homepage></app-homepage>
+<app-recipe-form></app-recipe-form>  -->
+<!-- <app-all-recipes></app-all-recipes> -->
+<!-- <app-recipe-page></app-recipe-page> -->
