--- a/src/app/recipes/recipe-page/recipe-page.component.html
+++ b/src/app/recipes/recipe-page/recipe-page.component.html
@@ -1,28 +1,22 @@
-
-
-<div  class="grid grid-nogutter surface-section text-800">
-    <div class="col-12 md:col-6 overflow-hidden">
-        <img src="assets\img\g.jpg" alt="Image" class="md:ml-auto p-6 block md:h-auto" style="width: 75%;">
-    </div>
-    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
-        <section>
-            <span class="block text-6xl font-bold ">Recipe Name</span>
-            <div class="text-1xl text-primary font-bold my-2">rating stars</div>
-            <div class="text-3xl text-primary font-bold mt-5">Ingredients</div>
-            <ul class="mt-0 mb-4 text-700 line-height-3">
-                <li >Ingredient 1</li>
-                <li >Ingredient 2</li>
-                <li >Ingredient 3</li>
-                <li >Ingredient 4</li>
-            </ul>
-            <div class="text-3xl text-primary font-bold mt-5">Steps</div>
-            <ul class="mt-0 mb-4 text-700 line-height-3">
-                <li>Step 1</li>
-                <li>Step 2</li>
-                <li>Step 3</li>
-                <li>Step 4</li>
-            </ul>
-            <button pButton pRipple label="Add to Favourite" disabled type="button" class="mr-3 p-button-raised"></button>
-        </section>
+<div class=""row pt-5>
+    <div class="grid grid-nogutter surface-section text-800">
+        <div class="col-12 md:col-6 overflow-hidden">
+            <img [src]="'https://localhost:7288/' + recipe.image" alt="{{recipe.recipeName}}" class="md:ml-auto p-6 block md:h-auto" style="width: 75%;">
+        </div>
+        <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
+            <section>
+                <span class="block text-6xl font-bold ">{{recipe.recipeName}}</span>
+                <p class="card-text"></p><p-rating [(ngModel)]="recipe.rating" [readonly]="true" [cancel]="false"></p-rating>
+                <div class="text-3xl text-primary font-bold mt-5">Ingredients</div>
+                <ul class="mt-0 mb-4 text-700 line-height-3">
+                    <li *ngFor="let ingredient of recipe.ingredients | split; let i = index">{{ ingredient }}</li>
+                </ul>
+                <div class="text-3xl text-primary font-bold mt-5">Steps</div>
+                <ul class="mt-0 mb-4 text-700 line-height-3">
+                    <li *ngFor="let step of recipe.steps | split; let i = index">{{ step }}</li>
+                </ul>
+                <button pButton pRipple label="Add to Favourite" disabled type="button" class="mr-3 p-button-raised"></button>
+            </section>
+        </div>
     </div>
 </div>
