--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -1,5 +1,5 @@
 <p-button (click)="showDialog()" styleClass="p-button p-button-primary" label="Login"></p-button>
-<p-dialog header="Login" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+<p-dialog #loginDialog header="Login" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="card p-fluid">
             <h5>Please enter your email and password : </h5>
