--- a/src/app/users/login2/login2.component.html
+++ b/src/app/users/login2/login2.component.html
@@ -1,6 +1,6 @@
 
-<p-button (click)="showDialog()" styleClass="p-button p-button-primary" label="Login"></p-button>
-<p-dialog  [(visible)]="visible" [modal]="true"  [draggable]="false" [resizable]="false">
+<!-- <p-button (click)="showDialog()" styleClass="p-button p-button-primary" label="Login"></p-button>
+<p-dialog  [(visible)]="visible" [modal]="true"  [draggable]="false" [resizable]="false"> -->
 <div class=" flex align-items-center justify-content-center h-100 overflow-hidden">
     <div class="flex flex-column align-items-center justify-content-center">
         <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
@@ -32,4 +32,4 @@
         </div>
     </div>
 </div>
-</p-dialog>
+<!-- </p-dialog> -->
