--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,42 @@
-<!-- 
-<app-login2></app-login2>
 
-
-<<app-recipe-page></app-recipe-page> -->
-<!--  -->
-<!-- <app-recipe-edit></app-recipe-edit> 
-<app-recipe-form></app-recipe-form>  -->
 <app-nav></app-nav>
-<router-outlet ></router-outlet>
+<div class="my-8">
+    <router-outlet ></router-outlet>
+</div>
 <app-footer></app-footer>
-<!-- <app-search></app-search>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- <app-search></app-search>
 
 <app-homepage></app-homepage>
 <app-recipe-form></app-recipe-form>  -->
 <!-- <app-all-recipes></app-all-recipes> -->
 <!-- <app-recipe-page></app-recipe-page> -->
+<!-- 
+
+
+
+<app-recipe-page></app-recipe-page> -->
+<!--  -->
+<!-- <app-recipe-edit></app-recipe-edit> 
+<app-recipe-form></app-recipe-form>  -->
+<!-- <div class="col-md-2 pe-5 pt-8 bg-body-tertiary">
+    <app-sidebar></app-sidebar>
+</div> -->
