--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,46 @@
-
+<section class="">
+    <footer class="text-center text-white" style="background-color: #0a4275;">
+        <div class="container align-items-center d-flex justify-content-between p-4 pb-0">
+            <section class="py-5">
+                <a class="logo navbar-brand" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                    <span class="mealify-text fs-2">Mealify</span><span class="dot">.</span>
+                </a>
+            </section>
+            
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+                    <div class="text-white">
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-google"></i>
+                        </a>
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                        <a href="" class="me-4 text-white">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </div>
+            </section>
+            <section class="py-5">
+            <p class="d-flex justify-content-center align-items-center">
+                <span class="me-3">Register for free</span>
+                <button type="button" class="btn btn-outline-light btn-rounded">
+                Sign up!
+                </button>
+            </p>
+            </section>
+        </div>
+        <div class="text-center p-3 bg-black-alpha-30">
+            © 2023 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">MEALIFY.</a>
+        </div>
+    </footer>
+</section>
