--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,8 +6,8 @@
                 <div class="text-8xl lh-1 text-primary font-bold mb-3 font">YOU DESERVE</div>
                 <p class="mt-0 mb-5 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <div class="container d-flex gap-2 ">
-                    <app-register></app-register>
-                    <app-login></app-login>
+                    <!-- <app-register></app-register>
+                    <app-login></app-login> -->
                 </div>
             </section>
         </div>
