--- a/src/app/recipes/browse/browse.component.html
+++ b/src/app/recipes/browse/browse.component.html
@@ -1,4 +1,4 @@
-<div class="search container ">
+<div class="search container mb-8">
     <div class="row justify-content-center" >
       <div class=" col-md-4 col-sm-8 col-xs-16" *ngFor="let recipe of getRecipesForPage(currentPage); let i = index">
         <div class="card mb-3 recipe-card">
