--- a/src/app/users/register/register.component.html
+++ b/src/app/users/register/register.component.html
@@ -1,37 +1,63 @@
-<p-button (click)="showDialog()" styleClass="p-button-outlined p-button-danger" label="Signup"></p-button>
-    <p-dialog header="SignUp" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-            <div class="card p-fluid ">
-                <h5>Please fill this information :</h5>
-                <div class="field">
-                    <label >Name</label>
-                    <input pInputText formControlName="userName" type="text" />
-                </div>
-                <div class="field">
-                    <label >Email</label>
-                    <input pInputText formControlName="userEmail" type="text" />
-                </div>
-                <div class="field">
-                    <label >Password</label>
-                    <p-password formControlName="userPass">
-                        <ng-template pTemplate="header">
-                            <h6>Pick a password</h6>
-                        </ng-template>
-                        <ng-template pTemplate="footer">
-                            <p class="mt-2">Suggestions</p>
-                            <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
-                                <li>At least one lowercase</li>
-                                <li>At least one uppercase</li>
-                                <li>At least one numeric</li>
-                                <li>Minimum 8 characters</li>
-                            </ul>
-                        </ng-template>
-                    </p-password>
-                </div>
-                <div class="d-flex gap-2">
-                    <p-button styleClass="p-button p-button-success" type="submit">Register</p-button>
-                    <p-button styleClass="p-button-outlined p-button-danger" type="button" (click)="cancel()">Cancel</p-button>
+<div class="container vh-100 d-flex justify-content-center align-items-center">
+    <form [formGroup]="registerForm" style="width: 50%;" (ngSubmit)="onSubmit(registerForm)">
+        <div class="card p-fluid ">
+            <h5>Please fill this information :</h5>
+            <div class="field">
+                <label >First Name</label>
+                <input pInputText formControlName="name" type="text" />
+                <div *ngIf="registerForm.get('name')?.errors && registerForm.get('name')?.touched" class="alert alert-danger">
+                    <p *ngIf="registerForm.get('name')?.errors?.['required']">Name is Required field</p>
+                    <p *ngIf="registerForm.get('name')?.errors?.['minlength']">minlength of name should be 3 chars</p>
+                    <p *ngIf="registerForm.get('name')?.errors?.['maxlength']">maxlength of name should be 8 chars</p>
                 </div>
             </div>
-        </form>
-    </p-dialog>
+            <div class="field">
+                <label >Last Name</label>
+                <input pInputText formControlName="rePassword" type="text" />
+            </div>
+            <div class="field">
+                <label >Email</label>
+                <input pInputText formControlName="email" type="text" />
+                <div *ngIf="registerForm.get('email')?.errors && registerForm.get('email')?.touched" class="alert alert-danger">     
+                    <p *ngIf="registerForm.get('email')?.errors?.['required']">email is Required field</p>
+                    <p *ngIf="registerForm.get('email')?.errors?.['email']">please enter valid email</p>
+                </div>
+            </div>
+            <div class="field">
+                <label >Phone</label>
+                <input pInputText formControlName="phone" type="text" />
+            </div>
+            <div class="field">
+                <label >Password</label>
+                <p-password formControlName="password">
+                    <ng-template pTemplate="header">
+                        <h6>Pick a password</h6>
+                    </ng-template>
+                    <ng-template pTemplate="footer">
+                        <p class="mt-2">Suggestions</p>
+                        <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                            <li>At least one lowercase</li>
+                            <li>At least one uppercase</li>
+                            <li>At least one numeric</li>
+                            <li>Minimum 8 characters</li>
+                        </ul>
+                    </ng-template>
+                </p-password>
+            </div>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex gap-3">
+                    <p-button [disabled]="registerForm.invalid" styleClass="p-button p-button-success" type="submit">
+                        <span *ngIf="!isLoading">Register</span>
+                        <i *ngIf="isLoading" class="pi pi-spin pi-spinner" style="font-size: 1.5rem"></i>
+                    </p-button>
+                    <p-button styleClass="p-button-outlined p-button-danger" type="button" [routerLink]="['']" routerLinkActive="router-link-active" >Cancel</p-button>
+                </div>
+                <div class="mt-3">
+                    <span class="align-self-center">Have an account?</span>
+                    <span [routerLink]="['/Login']" routerLinkActive="router-link-active" class="text-decoration-underline mx-2">Login</span>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
