Auth-Routing-Guards

--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -1,7 +1,7 @@
 
     <div class="d-flex justify-content-center align-items-center vh-100">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)" >
-            <div class="card  p-fluid">
+            <div class="card p-fluid w-30rem">
                 <h5>Please enter your email and password : </h5>
                 <div class="field">
                     <input pInputText placeholder="Email" formControlName="email" type="email"/>
