--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="search-box">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
-                        <li *ngIf="isLogged"  class="search navbar-nav">
+                        <li  class="search navbar-nav">
                             <span class="p-input-icon-left">
                                 <i class="pi pi-search"></i>
                                 <input type="text" pInputText [(ngModel)]="searchValue"  placeholder="Search" (keyup.enter)="searchRecipe()"
@@ -29,6 +29,12 @@
                     
                 <div class="end navbar-nav">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
+                        <div *ngIf="isLogged">
+                            <p-toast></p-toast>
+                            <p-menu #menu [model]="items" [popup]="true"></p-menu>
+                            <button pButton type="button" (click)="menu.toggle($event)" icon="pi pi-bars" label="" class="custom-button"></button>
+                        </div>
+
                         <li *ngIf="!isLogged" class="login nav-item">
                             <a class="nav-link" routerLink="/Login">Login</a>
                         </li>
@@ -37,7 +43,7 @@
                         </li>
                         <li *ngIf="isLogged" class="register nav-item">
                             <a class=" nav-link" (click)="logOut()" routerLink="/Register" style="color: white;">Signout</a>
-                        </li>
+                        </li> 
                     </div>
                 </div>
     </nav>
