--- a/src/app/recipes/browse/browse.component.scss
+++ b/src/app/recipes/browse/browse.component.scss
@@ -1,33 +1,35 @@
+.browse {
+  position: relative;
+  top: 60px;
+  min-height: 50vh;
+}
+.recipe-card:hover{
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+  -moz-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+  box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
+}
+.recipe-card .card-img-container {
+  //width: 300px; 
+  height: 250px;
+  overflow: hidden; 
+}  
 
-  .search {
-    position: relative;
-    top: 80px;
-    min-height: 50vh;
-  }
-  .recipe-card:hover{
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
-    -moz-box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
-    box-shadow: 0px 3px 5px 6px rgba(57, 41, 41, 0.1);
-  }
-  .recipe-card .card-img-container {
-    //width: 300px; 
-    height: 250px;
-    overflow: hidden; 
-  }  
+.recipe-card .card-title {
+  font-size: 1.5rem; 
+  color :black;
+  font-weight: bold;
+  
+}
+.sort {
+  text-align: beginning;
+  margin-bottom: 20px;
+}
 
-  .recipe-card .card-title {
-    font-size: 1.5rem; 
-    color :black;
-    font-weight: bold;
-    
-  }
-  
-  .recipe-card .card-text {
-    font-size: 1rem; 
-    color: rgb(22, 20, 20);
-  }
-  .recipe-image {
-    width: 100%
-  }
-  
+.recipe-card .card-text {
+  font-size: 1rem; 
+  color: rgb(22, 20, 20);
+}
+.recipe-image {
+  width: 100%
+}
