--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="field">
             <label>Dietary Restrictions</label>
-            <input pInputText id="" formControlName="dietaryRestriction"  placeholder="Enter Steps" type="text" />
+            <input pInputText id="" formControlName="dietaryRestrictions"  placeholder="Enter Steps" type="text" />
         </div>
         <div class="field">
             <button pButton type="submit">Edit</button>
