--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,9 @@
 <section class="fixed ">
-    <div class="card vh-50">
+    <div class="card p-4 vh-100">
         <div class="col-12">
+            <div class="m-0 card-w-title">
+                <p-menu [model]="plainMenuItems"></p-menu>
+            </div>
             <div class="m-0 card-w-title">
                 <p-menu [model]="plainMenuItems"></p-menu>
             </div>
