--- a/src/app/recipes/browse/browse.component.html
+++ b/src/app/recipes/browse/browse.component.html
@@ -1,4 +1,4 @@
-<div class="browse container">
+<div class="browse container mt-3 mb-8">
   <div class="row justify-content-center">
     <div *ngIf="isLoading; else loaded">
       <div class="card" style="display: flex; justify-content: center; align-items: center;">
