--- a/src/app/recipes/recipe-form/recipe-form.component.html
+++ b/src/app/recipes/recipe-form/recipe-form.component.html
@@ -1,4 +1,4 @@
-<div class="card p-fluid m-auto" [style]="{width: '50%'}">
+<div class="card p-fluid m-auto my-6" [style]="{width: '50%'}">
     <h5>Add Recipe</h5>
     <div class="field">
         <label>Name</label>
