--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
 
 <app-nav></app-nav>
 <div class="my-8">
-    <router-outlet ></router-outlet>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 pe-0" style="margin-inline: auto;">
+                <app-sidebar></app-sidebar>
+            </div> 
+            <div class="col-md-10 px-0 ">
+                <router-outlet></router-outlet>
+                <app-footer></app-footer>
+            </div>
+        </div>
+    </div>
+    
 </div>
-<app-footer></app-footer>
-
 
 
 
