--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,50 +1,40 @@
 <div class="header fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="logo navbar-brand" routerLink="/" routerLinkActive="active"[routerLinkActiveOptions]="{exact:true}">
+            <a class="logo navbar-brand" style="width: 130px;" routerLink="/" routerLinkActive="active"[routerLinkActiveOptions]="{exact:true}">
                 <span class="mealify-text">Mealify</span><span class="dot">.</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="options navbar-nav">
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
-                        <li class="nav-item">
-                            <a class="nav-link" routerLink="/Browse" routerLinkActive="active" >Recipes</a>
-                        </li>
-                    </div>
-                
+            <div class="options navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
+                    <li class="nav-item">
+                        <a class="nav-link recipes" routerLink="/Browse" routerLinkActive="active" >Recipes</a>
+                    </li>
                 </div>
-                <div class="search-box">
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
-                        <li  class="search navbar-nav">
-                            <span class="p-input-icon-left">
-                                <i class="pi pi-search"></i>
-                                <input type="text" pInputText [(ngModel)]="searchValue"  placeholder="Search" (keyup.enter)="searchRecipe()"
-                                aria-label="Search">
-                            </span>
-                        </li>
-                    </div>
+            
+            </div>
+            <div class="search-box">
+                <div class="mt-2 m-auto" id="navbarNavDropdown"> 
+                    <li  class="search navbar-nav ">
+                        <span class="p-input-icon-left">
+                            <i class="pi pi-search"></i>
+                            <input type="text" pInputText [(ngModel)]="searchValue"  placeholder="Search" (keyup.enter)="searchRecipe()"
+                            aria-label="Search">
+                        </span>
+                    </li>
                 </div>
-                    
-                    
-                <div class="end navbar-nav">
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
-                        <div *ngIf="isLogged">
-                            <p-toast></p-toast>
-                            <p-menu #menu [model]="items" [popup]="true"></p-menu>
-                            <button pButton type="button" (click)="menu.toggle($event)" icon="pi pi-bars" label="" class="custom-button"></button>
-                        </div>
-
-                        <li *ngIf="!isLogged" class="login nav-item">
-                            <a class="nav-link" routerLink="/Login">Login</a>
-                        </li>
-                        <li *ngIf="!isLogged" class="register nav-item">
-                            <a class=" nav-link" routerLink="/Register" style="color: white;">Sign Up</a>
-                        </li>
-                        <li *ngIf="isLogged" class="register nav-item">
-                            <a class=" nav-link" (click)="logOut()" routerLink="/Register" style="color: white;">Signout</a>
-                        </li> 
-                    </div>
-                </div>
+            </div>
+            <div class="end navbar-nav align-items-center">
+                        <p-toast></p-toast>
+                    <li *ngIf="!isLogged" class="login nav-item">
+                        <a class="fs-6 nav-link" routerLink="/Login">Login</a>
+                    </li>
+                    <li *ngIf="!isLogged" class="register nav-item">
+                        <a class="fs-6 nav-link" routerLink="/Register" style="color: white;">Sign Up</a>
+                    </li>
+                    <h5 *ngIf="isLogged">Welcome, {{loggedUserName}}</h5>
+                    <i *ngIf="isLogged" class="pi pi-heart mr-4 p-1 mt-3 p-text-secondary mx-5" pBadge style="font-size: 1.5rem; color: red;" value="0"></i>
+                    <li *ngIf="isLogged" class="register nav-item">
+                        <a class="fs-6 nav-link" (click)="logOut()" routerLink="/Register" style="color: white;">Signout</a>
+                    </li> 
+            </div>
     </nav>
 </div>
