--- a/src/app/recipes/recipe-form/recipe-form.component.html
+++ b/src/app/recipes/recipe-form/recipe-form.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="field">
         <label>Dietary Restrictions</label>
-        <input pInputText id="" [(ngModel)]="recipe.dietaryRestriction" placeholder="Enter Steps" type="text" />
+        <input pInputText id="" [(ngModel)]="recipe.dietaryRestrictions" placeholder="Enter Steps" type="text" />
     </div>
     <div class="field">
         <button pButton (click)="postRecipe()">Add</button>
