--- a/src/app/recipes/recipe-page/recipe-page.component.scss
+++ b/src/app/recipes/recipe-page/recipe-page.component.scss
@@ -3,14 +3,17 @@
 }
 
 .rPage {
-  background-image: url('../../../assets/img/bg.jpg');
   background: linear-gradient(0deg, rgba(219, 219, 219, 0.859), rgba(240, 240, 240, 0.766)), url('../../../assets/img/bg.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: white;
 }
-  
+
+.reviewsSection {
+	background: linear-gradient(0deg, rgba(246, 246, 246, 0.811), rgba(240, 240, 240, 0.871)), url("../../../assets/img/cook-objects-doodles-seamless-pattern-black-white-vector-illustration-45529910.webp");
+}
+
 .scrolldown {
 	border: 2px solid #790c0c;
 	border-radius: 30px;
@@ -48,4 +51,3 @@
 	}
 }
 
-  
