--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,9 +4,9 @@
             <div class="m-0 card-w-title">
                 <p-menu [model]="plainMenuItems"></p-menu>
             </div>
-            <div class="m-0 card-w-title">
+            <!-- <div class="mt-3 card-w-title">
                 <p-menu [model]="plainMenuItems"></p-menu>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
